<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SpecialtyPizzaActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="226dp" android:baselineAligned="false">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/pizzaPicker"
                        android:text="@string/selected_pizza_none"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/specialtyRecycleView"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="374dp">
            <ListView
                    android:layout_width="199dp"
                    android:layout_height="match_parent" android:dividerHeight="0dp" android:background="#C8C8C8"
                    android:id="@+id/toppingsListView"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="192dp" android:id="@+id/sizeRadioGroup">
                    <RadioButton
                            android:text="@string/small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/smallButton"/>
                    <RadioButton
                            android:text="@string/medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/mediumButton"/>
                    <RadioButton
                            android:text="@string/large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/largeButton"/>
                </RadioGroup>
                <CheckBox
                        android:text="@string/extra_cheese"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" android:id="@+id/extraCheese"/>
                <CheckBox
                        android:text="@string/extra_sauce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/extraSauce"/>
                <TextView
                        android:text="@string/sauce"
                        android:layout_width="match_parent"
                        android:layout_height="34dp" android:id="@+id/sauceTextView"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/quantityEditText" android:hint="@string/quantity"
                        android:importantForAutofill="no" android:textColorHint="#8D6E63"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/total"
                android:layout_width="match_parent"
                android:layout_height="58dp" android:id="@+id/totalTextView" android:textSize="24sp"
                android:background="#FFFFFF"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
            <Button
                    android:text="@string/back"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content" android:id="@+id/specialtyBackButton"
                    android:layout_weight="1" style="@style/Widget.AppCompat.Button"/>
            <Button
                    android:text="@string/add_to_order"
                    android:layout_width="281dp"
                    android:layout_height="59dp" android:id="@+id/addButton" android:minHeight="48dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>