<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentOrdersActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="729dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="1dp" android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp">
        <TextView
                android:text="@string/current_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:textAlignment="center"
                android:textSize="34sp" android:textColor="#FF5B02" android:textStyle="bold"
                android:textAllCaps="true"/>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="49dp">
                <TextView
                        android:text="@string/order_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/orderNumberTextView"
                        android:layout_weight="1"
                        android:textSize="20sp"/>
            </LinearLayout>
        </FrameLayout>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="501dp" android:id="@+id/orderListView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp">
            <TextView
                    android:text="@string/subtotal"
                    android:layout_width="140dp"
                    android:layout_height="match_parent" android:id="@+id/subTotalTextView" android:layout_weight="1"/>
            <TextView
                    android:text="@string/sales_tax"
                    android:layout_width="140dp"
                    android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/salesTaxTextView"/>
        </LinearLayout>
        <TextView
                android:text="@string/total"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:id="@+id/totalTextyView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/back"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content" android:id="@+id/currentOrdersBackButton"
                    android:layout_weight="1" style="@style/Widget.AppCompat.Button"/>
            <Button
                    android:text="@string/remove_pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/removePizzaButton" android:layout_weight="1"/>
            <Button
                    android:text="@string/place_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/placeOrderButton" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>