<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BuildYourOwnPizzaActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="384dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="1dp" android:layout_marginEnd="26dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp">
            <ImageView
                    android:layout_width="420dp"
                    android:layout_height="200dp" app:srcCompat="@drawable/dsa" android:id="@+id/imageView"
                    android:layout_weight="1" android:scaleType="fitXY" android:importantForAccessibility="no"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="409dp"
                    android:layout_height="199dp" android:layout_weight="1">
                <RadioGroup
                        android:layout_width="181dp"
                        android:layout_height="224dp" android:id="@+id/byopSizeRadioGroup">
                    <RadioButton
                            android:text="@string/small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/smallPizzaButton"/>
                    <RadioButton
                            android:text="@string/medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/mediumPizzaButton"/>
                    <RadioButton
                            android:text="@string/large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/largePizzaButton"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="387dp">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ListView
                        android:layout_width="140dp"
                        android:layout_height="match_parent" android:id="@+id/originalToppingsListView">
                </ListView>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="106dp"
                        android:layout_height="match_parent">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView3"
                            android:textAlignment="center" android:text="@string/click_to_add"/>
                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="101dp" android:id="@+id/button"
                            android:visibility="invisible"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/byopQuantityEditTextNumber" android:hint="@string/quantity"
                            android:importantForAutofill="no" android:textColorHint="#8D6E63" android:minHeight="48dp"/>
                </LinearLayout>
                <ListView
                        android:layout_width="140dp"
                        android:layout_height="match_parent" android:id="@+id/addedToppingListView"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
        </TableLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp">
            <CheckBox
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/byopExtraCheeseCheckBox"
                    android:layout_weight="1"
                    android:text="@string/extra_cheese"/>
            <CheckBox
                    android:text="@string/extra_sauce"
                    android:layout_width="80dp"
                    android:id="@+id/byopExtraSauceCheckBox" android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            <Spinner
                    android:layout_width="90dp"
                    android:layout_height="wrap_content" android:id="@+id/byopSauceSpinner" android:layout_weight="1"
                    android:minHeight="48dp"/>
        </LinearLayout>
        <TextView
                android:text="@string/total"
                android:layout_width="374dp"
                android:layout_height="100dp" android:id="@+id/byopTotalTextView" android:layout_weight="1"
                android:textSize="24sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/byopExtraCheeseButton">
            <Button
                    android:text="@string/back"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content" android:id="@+id/byopBackButton" android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button"/>
            <Button
                    android:text="@string/add_to_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/byopAddToOrder" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>