<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoreOrdersActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="729dp" android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="1dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/store_orders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:textAlignment="center"
                    android:textColor="#FF5722" android:textSize="34sp" android:textStyle="bold"
                    android:textAllCaps="true"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="52dp">
                <TextView
                        android:text="@string/order_number"
                        android:layout_width="15dp"
                        android:layout_height="20dp" android:id="@+id/storeOrderNumberTextView"
                        android:layout_weight="1"/>
                <Spinner
                        android:layout_width="1dp"
                        android:layout_height="48dp" android:id="@+id/orderNumberPicker"
                        android:layout_weight="1"/>
                <TextView
                        android:text="@string/order_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/storeOrderTotalTextView"
                        android:layout_weight="1"/>
            </LinearLayout>
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="559dp" android:id="@+id/storeOrdersListView"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:text="@string/back"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content" android:id="@+id/storeOrdersBackButton"
                        android:layout_weight="1"
                        style="@style/Widget.AppCompat.Button"/>
                <Button
                        android:text="@string/cancel_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/cancelStoreOrderButton"
                        android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>