<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity" android:id="@+id/coordinatorLayout">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="729dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="2dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="2dp">
        <TextView
                android:text="@string/rupizzeria"
                android:layout_width="match_parent"
                android:layout_height="164dp" android:id="@+id/textView2" android:textSize="34sp"
                android:textAlignment="center" android:textColor="#FF0000" android:typeface="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:lineSpacingExtra="8sp"
                android:textAllCaps="false" android:textStyle="bold"/>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="441dp" android:orientation="horizontal">

            <TableRow android:layout_width="285dp" android:layout_height="139dp">
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/special"
                            android:layout_width="200dp"
                            android:layout_height="200dp" android:id="@+id/imageView4"
                            app:srcCompat="@drawable/special" android:importantForAccessibility="no"
                            tools:srcCompat="@drawable/special" android:scaleType="fitXY"/>
                    <Button
                            android:text="@string/speciality_pizzas"
                            android:layout_width="200dp"
                            android:layout_height="200dp" android:id="@+id/SpecialtyPizzaButton"
                            android:textAlignment="center"
                            android:visibility="visible" tools:visibility="visible" android:background="#00FFFFFF"
                            android:textSize="16sp" android:textStyle="bold" android:backgroundTint="#009EFF00"
                            android:backgroundTintMode="multiply" android:textColor="#FF5722"
                    />
                </FrameLayout>
                <FrameLayout
                        android:layout_width="198dp"
                        android:layout_height="match_parent">

                    <ImageView
                            android:src="@drawable/delicious"
                            android:layout_width="200dp"
                            android:layout_height="200dp" android:id="@+id/imageView5"
                            app:srcCompat="@drawable/delicious" tools:srcCompat="@drawable/delicious"
                            android:scaleType="fitXY" android:importantForAccessibility="no"/>
                    <Button
                            android:text="@string/build_your_own_pizza"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/BuildYourOwnButton"
                            android:backgroundTint="#00FFFFFF" android:textStyle="bold" android:textColor="#FF5722"/>
                </FrameLayout>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="111dp">
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <Button
                            android:text="@string/current_order"
                            android:layout_width="match_parent"
                            android:layout_height="200dp" android:id="@+id/CurrentOrderButton"
                            android:backgroundTint="#00FFFFFF" android:textColor="#FF8A65"
                            android:background="@color/purple_700" app:strokeColor="#0B0B0B" app:strokeWidth="5dp"
                            app:cornerRadius="10dp"/>
                </FrameLayout>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/StoreOrdersButton"
                            android:backgroundTint="#00FFFFFF" android:text="@string/store_orders"
                            android:textColor="#FFFF8D" android:background="#7C4DFF"/>
                </FrameLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>